--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+[build-dependencies]
+flate2 = "1.1.0"
+tar = { version = "0.4.44", default-features = false }
+ureq = { version = "3.0.9", features = ["platform-verifier"] }
