Initializes manifest parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.32", features = ["string"] }
+erdp = "0.1.1"
+rustc-hash = "2.1.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_yaml = "0.9.34"
 
 [build-dependencies]
 flate2 = "1.1.0"
