--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.32", features = ["string"] }
 erdp = "0.1.1"
+lua54-sys = { path = "lua54-sys" }
 rustc-hash = "2.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
@@ -13,6 +14,6 @@ thiserror = "2.0.12"
 
 [build-dependencies]
 cc = "1.2.16"
-flate2 = "1.1.0"
-tar = { version = "0.4.44", default-features = false }
-ureq = { version = "3.0.9", features = ["platform-verifier"] }
+
+[workspace]
+members = ["lua54-sys"]
