--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ rustc-hash = "2.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
 thiserror = "2.0.12"
+url = "2.5.4"
 zl = { git = "https://github.com/ultimaweapon/zero-lua.git" }
