--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ rustc-hash = "2.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
 thiserror = "2.0.12"
-tokio = { version = "1.44.1", features = ["rt"] }
+tokio = { version = "1.44.1", features = ["process", "rt"] }
 url = "2.5.4"
 zl = { git = "https://github.com/ultimaweapon/zero-lua.git" }
