Enables UTF-8 on MSVCRT

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["process", "rt"] }
 url = "2.5.4"
 zl = { git = "https://github.com/ultimaweapon/zero-lua.git" }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+libc = "0.2.172"
