--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -16,5 +16,7 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v4
+    - name: Lint
+      run: cargo clippy -- -D warnings
     - name: Install Project
       run: cargo install --path .
