--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.32", features = ["string"] }
 erdp = "0.1.1"
+memchr = "2.7.4"
 rustc-hash = "2.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
 thiserror = "2.0.12"
-tokio = { version = "1.44.1", features = ["io-util", "process", "rt"] }
+tokio = { version = "1.44.1", features = ["io-util", "process", "rt", "time"] }
 url = "2.5.4"
 zl = { git = "https://github.com/ultimaweapon/zero-lua.git" }
 
