--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ erdp = "0.2.0"
 memchr = "2.7.4"
 rustc-hash = "2.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.147"
 serde_yaml = "0.9.34"
 thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["io-util", "process", "rt", "time"] }
-tsuki = "0.4.0"
+tsuki = { version = "0.4.2", features = ["serde"] }
 url = "2.5.4"
