--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.147"
 serde_yaml = "0.9.34"
 thiserror = "2.0.12"
-tokio = { version = "1.44.1", features = ["io-util", "process", "rt", "time"] }
+tokio = { version = "1.44.1", features = ["fs", "io-util", "process", "rt", "time"] }
 tsuki = { version = "0.4.2", features = ["serde"] }
 url = "2.5.4"
